@@ -1,0 +1,1 @@
+Get docstrings for IDLE calltips more often by using inspect.getdoc.
